# mandelbrot_fractal

./: .gitignore  CMakeLists.txt  README.md  chunk.h  chunk_manager.h  color_palette.h  color_pallete.h  constants.h  coordinates.h  dot.h  main.cpp  mandelbrot.c  mandelbrot.h  mandelbrot_sample.c  multi_thread_mandelbrot_handler.h  pixel.h  thread_queue.h  x11_config.h
